--- a/swanky.config.json
+++ b/swanky.config.json
@@ -1,8 +1,8 @@
 {
   "node": {
-    "localPath": "/home/ubuntu/OpenSmartcontract/opensmartcontract-food-delivery/bin/swanky-node",
+    "localPath": "./bin/swanky-node",
     "polkadotPalletVersions": "polkadot-v0.9.39",
-    "supportedInk": "v4.2.0"
+    "supportedInk": "v4.0.1"
   },
   "accounts": [
     {
@@ -48,11 +48,6 @@
     "foodorder": {
       "name": "foodorder",
       "moduleName": "foodorder",
-      "deployments": []
-    },
-    "flipper": {
-      "name": "flipper",
-      "moduleName": "flipper",
       "deployments": []
     }
   }
