--- a/contracts/foodorder/logics/Cargo.toml
+++ b/contracts/foodorder/logics/Cargo.toml
@@ -20,6 +20,8 @@ openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-co
     "psp34",
 ] }
 
+crud-macro = { path = "../crud-macro", default-features = false }
+
 [dev-dependencies]
 ink_e2e = "4.0.1"
 
