--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opensmartcontract-food-delivery",
+  "name": "blockchainfoodorder",
   "version": "1.0.0",
   "author": "Alan Boyd <alancameronboyd@gmail.com>",
   "license": "MIT",
