--- a/contracts/foodorder/Cargo.toml
+++ b/contracts/foodorder/Cargo.toml
@@ -5,35 +5,22 @@ authors = ["Alan Boyd <alancameronboyd@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.0.1", default-features = false }
+ink = { version = "4.3.0", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
     "derive",
 ] }
-scale-info = { version = "2.3", default-features = false, features = [
+scale-info = { version = "2.6", default-features = false, features = [
     "derive",
 ], optional = true }
 
-logic = { path = "logic", default-features = false, features = [
-    "ink-as-dependency",
-] }
+openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", tag = "4.0.0-beta.1", default-features = false, features = ["psp22", "ownable", "access_control", "upgradeable"] }
 
-# Include brush as a dependency and enable default implementation for PSP22 via brush feature
-openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = [
-    "psp22",
-] }
-
-
-[dev-dependencies]
-ink_e2e = "4.0.1"
+logic = { path = "logic", default-features = false, features = []}
 
 [lib]
 name = "foodorder"
 path = "src/lib.rs"
-crate-type = [
-    # Used for normal contract Wasm blobs.
-    "cdylib",
-]
 
 [features]
 default = ["std"]
@@ -43,5 +30,6 @@ e2e-tests = []
 
 [profile.release] 
 overflow-checks = false
+codegen-units = 16
 opt-level = 3
 
